Atualizacao da posição da imagem

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="versus">vs</div>
 
             <div id="computador">
-                <div id="jogador-foto"><img src="Imagens/computador.png"></div>
+                <div id="computador-foto"><img src="Imagens/computador.png"></div>
                 <h2 id="computador-nome">Computador</h2>
                 <span id="computador-pontos">0</span>
 
